# SugarboxV2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  changelog.txt
.github/workflows/: Releases.yml  cmake.yml  macos.yml  release.yml  ubuntu.yml  windows.yml
Sugarbox/: ALSoundMixer.cpp  ALSoundMixer.h  CMakeLists.txt  CRTCDialog.cpp  CRTCDialog.h  CRTCDialog.ui  Canvas.cpp  Canvas.h  ConfigurationManager.cpp  ConfigurationManager.h  DebugCommand.cpp  DebugCommand.h  DebugDialog.cpp  DebugDialog.h  DebugDialog.ui  DebugInterface.h  DebugSocket.cpp  DebugSocket.h  DisassemblyWidget.cpp  DisassemblyWidget.h  DiskDisplay.cpp  DiskDisplay.h  DiskWidget.cpp  DiskWidget.h  Display.cpp  Display.h  DlgSettings.cpp  DlgSettings.h  Emulation.cpp  Emulation.h  FlagHandler.cpp  FlagHandler.h  Functions.cpp  Functions.h  ISoundNotification.h  IUpdate.h  Log.cpp  Log.h  MemoryDialog.cpp  MemoryDialog.h  (+45 more)
Sugarbox/CART/: AmstradPlus.f4 (Parados 1.0) (unofficial).cpr  AmstradPlus.f4.cpr
Sugarbox/CONF/: 101_keyboard_win  CPC464DK.cfg  CPC464DKDDI1.cfg  CPC464DKDDI1128KO.cfg  CPC464FR.cfg  CPC464FR128KO.CFG  CPC464FRDDI1.cfg  CPC464FRDDI1128KO.cfg  CPC464SP.cfg  CPC464SPDDI1.cfg  CPC464SPDDI1128KO.cfg  CPC464UK.cfg  CPC464UKDDI1.cfg  CPC464UKDDI1128KO.cfg  CPC6128DK.cfg  CPC6128FR.cfg  CPC6128FRBONNYDOS.cfg  CPC6128FRCRTC0.cfg  CPC6128FRCRTC1.cfg  CPC6128FRFW3512KRD000K.cfg  CPC6128FRFW3512KRD256K.cfg  CPC6128FRFW3512KRD448K.cfg  CPC6128FRORGAMS.cfg  CPC6128FRXMEM.cfg  CPC6128FUTUREOSDE.cfg  CPC6128FUTUREOSEN.cfg  CPC6128FUTUREOSES.cfg  CPC6128FUTUREOSFR.cfg  CPC6128PLUSEN.cfg  CPC6128PLUSFR.cfg  CPC6128SP.cfg  CPC6128SymbOs.cfg  CPC6128UK.cfg  CPC664UK.cfg  KeyboardMaps.ini
Sugarbox/ROM/: 10-ORGEDIT.ROM  11-ORGAMS.ROM  12-MONOGAMS.ROM  AksROM v1.0 (arkos).rom  BonnyDOS V1.72S.ROM  BonnyDOS-Addon #1S.rom  BonnyDOS-Addon #2S.rom  CPC System Information Utility (UK) (1994) [Original] [UTILITAIRE] [ROM].rom  CPM Accessory Rom 1 (UK) (1988) (Version 2.30) [Graduate Software] [Original] [UTILITAIRE] [ROM].rom  CPM Plus On Rom (UK) (Face 1) (1988) (Version 2.34) [Graduate Software] [Original] [UTILITAIRE] [ROM].rom  CPM Plus On Rom (UK) (Face 2) (1988) (Version 2.34) [Graduate Software] [Original] [UTILITAIRE] [ROM].rom  CPMPLUS1.ROM  CPMPLUS2_0K.ROM  CPMPLUS2_256K  CPMPLUS2_448K  DTC ROM 1.rom  DTC ROM 2.rom  FOSC-A.ROM  FOSC-B.ROM  FOSC-C.ROM  FOSC-D.ROM  FOSC-D_MacD.ROM  FOSC-D_Tolkin.ROM  FOSC-E-A.ROM  FOSC-E-B.ROM  FOSC-E-C.ROM  FOSC-E-D.ROM  FOSC-E-D_MacD.ROM  FOSC-E-D_Tolkin.ROM  FOSC-F-A.ROM  FOSC-F-B.ROM  FOSC-F-C.ROM  FOSC-F-D.ROM  FOSC-F-D_MacD.ROM  FOSC-F-D_Tolkin.ROM  FOSC-S-A.ROM  FOSC-S-B.ROM  FOSC-S-C.ROM  FOSC-S-D.ROM  FOSC-S-D_MacD.ROM  (+59 more)
Sugarbox/Resources/: labels.ini
Sugarbox/shaders/: default.frag  mask_1.frag  mask_2.frag
sugarpi-action/: Dockerfile  action.yml  entrypoint_docker.sh
