cmake_minimum_required(VERSION 3.0)

if (MSVC)
   set( CMAKE_INSTALL_PREFIX bin)
   set (CMAKE_INSTALL_BINDIR ".")
endif()

#no config util
set ( ALSOFT_NO_CONFIG_UTIL ON CACHE BOOL "" FORCE)
set ( ALSOFT_EXAMPLES OFF CACHE BOOL "" FORCE)
set ( ALSOFT_TESTS OFF CACHE BOOL "" FORCE)
set ( ALSOFT_UTILS OFF CACHE BOOL "" FORCE)
set ( ALSOFT_CONFIG OFF CACHE BOOL "" FORCE)
set ( ALSOFT_INSTALL OFF CACHE BOOL "" FORCE)
set ( ALSOFT_HRTF_DEFS OFF CACHE BOOL "" FORCE)
set ( ALSOFT_AMBDEC_PRESETS OFF CACHE BOOL "" FORCE   )
set ( AL_LIBTYPE_STATIC ON CACHE BOOL "" FORCE   )
set ( LIBTYPE STATIC)
set ( FORCE_STATIC_VCRT ON CACHE BOOL "" FORCE )
set ( BUILD_SHARED_LIB_ OFF CACHE BOOL "" FORCE )
set ( USE_MSVC_RUNTIME_LIBRARY_DLL OFF CACHE BOOL "" FORCE )

add_subdirectory(openal-soft)
add_subdirectory(CPCCore)
add_subdirectory(Sugarbox)
